--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ Nguyên tắc làm việc với CSS:
 #slider {
   margin-top: 46px;
   padding-top: 50%;
-  background: url("/assets/images/slider/ny.jpg") top center / cover no-repeat;
+  background: url("./assets/images/slider/ny.jpg") top center / cover no-repeat;
   position: relative;
 }
 
